--- a/mcp6/app/src/main/res/layout/activity_main_dua.xml
+++ b/mcp6/app/src/main/res/layout/activity_main_dua.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/activity_vertical_margin">
+    android:id="@+id/linierlayout"
+    android:padding="@dimen/activity_vertical_margin" >
 
     <TextView
         android:layout_width="fill_parent"
@@ -12,8 +13,8 @@
         android:text="@string/hallo" />
 
     <Button
-        android:id="@+id/button1"
-        android:layout_width="98dp"
+        android:id="@+id/button"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:text="Save" />
+        android:text="View Saved Data" />
 </LinearLayout>
